--- a/.env.renkx
+++ b/.env.renkx
@@ -42,14 +42,6 @@ NGINX_LOG_DIR=./renkxlogs/nginx
 NGINX_INSTALL_APPS=
 
 #
-# SUPERVISOR
-#
-SUPERVISOR_CONFIG=./services/supervisor/conf.d/
-SUPERVISOR_LOG=./logs/supervisor
-SUPERVISOR_CONF_FILE=./services/supervisor/supervisord.conf
-SUPERVISOR_HOST_PORT_C=9001
-
-#
 # PHP7
 #
 # Available PHP_EXTENSIONS:
@@ -99,3 +91,17 @@ FRPC_CONF_FILE=/job/docker/dnmpconfig/frpc/frpc.ini
 
 # bbwws配置目录
 BBWWS_CONF_DIR=/job/docker/dnmpconfig/bbwws
+
+# root用户的.gitconfig文件
+ROOT_GITCONFIG_FILE=/job/docker/dnmpconfig/git/gitconfig
+
+# root用户.ssh目录配置
+ROOT_SSH_DIR=/job/docker/conf/ssh
+
+#
+# supervisor
+#
+SUPERVISOR_PHP_LOG_DIR=./renkxlogs/supervisor
+SUPERVISOR_CONFIG=/job/docker/dnmpconfig/supervisor/conf.d/
+SUPERVISOR_LOG=./renkxlogs/supervisor
+SUPERVISOR_CONF_FILE=./renkxservices/supervisor/supervisord.conf
