--- a/.env.renkx
+++ b/.env.renkx
@@ -105,3 +105,6 @@ SUPERVISOR_PHP_LOG_DIR=./renkxlogs/supervisor
 SUPERVISOR_CONFIG=/job/docker/dnmpconfig/supervisor/conf.d/
 SUPERVISOR_LOG=./renkxlogs/supervisor
 SUPERVISOR_CONF_FILE=./renkxservices/supervisor/supervisord.conf
+
+# composer auth.json文件：拉取时所输入的账号密码
+COMPOSER_AUTH_JSON=/job/docker/dnmpconfig/composer/auth.json
