--- a/renkxservices/php/Dockerfile
+++ b/renkxservices/php/Dockerfile
@@ -37,7 +37,9 @@ RUN curl -o /usr/bin/composer https://mirrors.aliyun.com/composer/composer.phar 
 ENV COMPOSER_HOME=/tmp/composer
 
 # php image's www-data user uid & gid are 82, change them to 1000 (primary user)
-RUN apk --no-cache add shadow && usermod -u 1000 www-data && groupmod -g 1000 www-data
+RUN apk --no-cache add shadow && usermod -u 1000 www-data && groupmod -g 1000 www-data \
+    # todo 更改用户shell www-data需要执行定时脚本
+    && usermod -s /bin/ash www-data
 
 
 WORKDIR /www
