--- a/.env.renkx
+++ b/.env.renkx
@@ -4,12 +4,12 @@ NGINX_IPV4=1.1.0.201
 #
 # PHP source directory
 #
-SOURCE_DIR=/job/app
+SOURCE_DIR=~/job/app
 
 #
 # Runtime data directory
 #
-DATA_DIR=/job/data
+DATA_DIR=~/job/data
 
 #
 # Container Timezone
@@ -32,11 +32,11 @@ CONTAINER_PACKAGE_URL=mirrors.aliyun.com
 NGINX_VERSION=1.19.1-alpine
 NGINX_HTTP_HOST_PORT=80
 NGINX_HTTPS_HOST_PORT=443
-NGINX_CONFD_DIR=/job/docker/dnmpconfig/nginx/conf.d
+NGINX_CONFD_DIR=~/job/docker/dnmpconfig/nginx/conf.d
 NGINX_CONF_FILE=./renkxservices/nginx/nginx.conf
 NGINX_FASTCGI_PHP_CONF=./renkxservices/nginx/fastcgi-php.conf
 NGINX_FASTCGI_PARAMS=./renkxservices/nginx/fastcgi_params
-NGINX_SSL_CERTIFICATE_DIR=/job/docker/dnmpconfig/nginx/ssl
+NGINX_SSL_CERTIFICATE_DIR=~/job/docker/dnmpconfig/nginx/ssl
 NGINX_LOG_DIR=./renkxlogs/nginx
 # Available apps: certbot
 NGINX_INSTALL_APPS=
@@ -60,24 +60,24 @@ NGINX_INSTALL_APPS=
 # or install multi plugins as:
 # PHP_EXTENSIONS=pdo_mysql,mysqli,gd,curl,opcache
 #
-PHP_VERSION=7.3
+PHP_VERSION=7.3.25
 PHP_PHP_CONF_FILE=./renkxservices/php/php.ini
 PHP_FPM_CONF_FILE=./renkxservices/php/php-fpm.conf
 PHP_LOG_DIR=./renkxlogs/php
-PHP_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache,redis,bcmath,soap,xmlrpc,zip,pdo_dblib
+PHP_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache,redis,bcmath,soap,xsl,xmlrpc,zip,pdo_dblib,pdo_sqlsrv,sockets,shmop,pcntl,gettext
 
 #
 # MySQL8
 #
-MYSQL_VERSION=8.0
-MYSQL_HOST_PORT=3306
+MYSQL_VERSION=8.0.22
+MYSQL_HOST_PORT=3388
 MYSQL_ROOT_PASSWORD=admin963
 MYSQL_CONF_FILE=./renkxservices/mysql/mysql.cnf
 
 #
 # Redis
 #
-REDIS_VERSION=5.0.3-alpine
+REDIS_VERSION=5.0.10-alpine
 REDIS_HOST_PORT=6379
 REDIS_CONF_FILE=./renkxservices/redis/redis.conf
 
@@ -87,24 +87,29 @@ REDIS_CONF_FILE=./renkxservices/redis/redis.conf
 NODE_VERSION=10.16.1-alpine
 
 # frp客户端配置
-FRPC_CONF_FILE=/job/docker/dnmpconfig/frpc/frpc.ini
+FRPC_CONF_FILE=~/job/docker/dnmpconfig/frpc/frpc.ini
 
 # bbwws配置目录
-BBWWS_CONF_DIR=/job/docker/dnmpconfig/bbwws
+BBWWS_CONF_DIR=~/job/docker/dnmpconfig/bbwws
 
 # root用户的.gitconfig文件
-ROOT_GITCONFIG_FILE=/job/docker/dnmpconfig/git/gitconfig
+ROOT_GITCONFIG_FILE=~/job/docker/dnmpconfig/git/gitconfig
 
 # root用户.ssh目录配置
-ROOT_SSH_DIR=/job/docker/conf/ssh
+ROOT_SSH_DIR=~/job/docker/dnmpconfig/ssh
 
 #
 # supervisor
 #
 SUPERVISOR_PHP_LOG_DIR=./renkxlogs/supervisor
-SUPERVISOR_CONFIG=/job/docker/dnmpconfig/supervisor/conf.d/
+SUPERVISOR_CONFIG=~/job/docker/dnmpconfig/supervisor/conf.d/
 SUPERVISOR_LOG=./renkxlogs/supervisor
 SUPERVISOR_CONF_FILE=./renkxservices/supervisor/supervisord.conf
 
 # composer auth.json文件：拉取时所输入的账号密码
-COMPOSER_AUTH_JSON=/job/docker/dnmpconfig/composer/auth.json
+COMPOSER_AUTH_JSON=~/job/docker/dnmpconfig/composer/auth.json
+
+# ZSH配置和操作记录
+ROOT_OH_MY_ZSH=~/.oh-my-zsh
+ROOT_ZSHRC_FILE=~/job/docker/dnmpconfig/zsh/zshrc
+ROOT_ZSH_HISTORY_FILE=~/job/docker/dnmpconfig/zsh/zsh_history
