新增nginx的SNI流量分发

--- a/.env.renkx
+++ b/.env.renkx
@@ -1,5 +1,6 @@
 DEFAULT_SUBNET=1.1.0.1/24
 NGINX_IPV4=1.1.0.201
+FRPC_IPV4=1.1.0.222
 
 #
 # PHP source directory
@@ -105,6 +106,7 @@ SUPERVISOR_PHP_LOG_DIR=./renkxlogs/supervisor
 SUPERVISOR_CONFIG=~/job/docker/dnmpconfig/supervisor/conf.d/
 SUPERVISOR_LOG=./renkxlogs/supervisor
 SUPERVISOR_CONF_FILE=./renkxservices/supervisor/supervisord.conf
+SUPERVISOR_CRONTAB_ROOT_FILE=~/job/docker/dnmpconfig/crontabs/root
 
 # composer auth.json文件：拉取时所输入的账号密码
 COMPOSER_AUTH_JSON=~/job/docker/dnmpconfig/composer/auth.json
