--- a/renkxservices/nginx/nginx.conf
+++ b/renkxservices/nginx/nginx.conf
@@ -20,6 +20,45 @@ events {
     worker_connections  51200;
 }
 
+stream {
+    # 这里就是 SNI 识别，将域名映射成一个配置名
+    map $ssl_preread_server_name $backend_name {
+    # 域名都不匹配情况下的默认值
+        default web;
+    }
+
+    # web，配置转发详情
+    upstream web {
+        server 127.0.0.1:8080;
+    }
+
+    # 监听 80
+    server {
+        listen 80 reuseport;
+        proxy_pass $backend_name;
+        proxy_protocol on;
+    }
+
+    # 这里就是 SNI 识别，将域名映射成一个配置名
+    map $ssl_preread_server_name $backend_name_443 {
+    # 域名都不匹配情况下的默认值
+        default web_443;
+    }
+
+    # web_443，配置转发详情
+    upstream web_443 {
+        server 127.0.0.1:4443;
+    }
+
+    # 监听 443 并开启 ssl_preread
+    server {
+        listen 443 reuseport;
+        proxy_pass  $backend_name_443;
+        proxy_protocol on;
+        ssl_preread on;
+    }
+}
+
 http {
     #设定mime类型,类型由mime.type文件定义
     include       /etc/nginx/mime.types;
@@ -89,6 +128,12 @@ http {
         ''      close;
     }
 
-    include /etc/nginx/conf.d/*.conf;
+    # 显示的定义一个 default_server
+    server {
+        listen 8080 default_server;
+        server_name _;
+        return 403;
+    }
+
     include /etc/nginx/conf.d/*-/*.conf;
 }
