更改nginx第四层80端口代理

--- a/renkxservices/nginx/nginx.conf
+++ b/renkxservices/nginx/nginx.conf
@@ -22,24 +22,6 @@ events {
 
 stream {
     # 这里就是 SNI 识别，将域名映射成一个配置名
-    map $ssl_preread_server_name $backend_name {
-    # 域名都不匹配情况下的默认值
-        default web;
-    }
-
-    # web，配置转发详情
-    upstream web {
-        server 127.0.0.1:8080;
-    }
-
-    # 监听 80
-    server {
-        listen 80 reuseport;
-        proxy_pass $backend_name;
-        proxy_protocol on;
-    }
-
-    # 这里就是 SNI 识别，将域名映射成一个配置名
     map $ssl_preread_server_name $backend_name_443 {
     # 域名都不匹配情况下的默认值
         default web_443;
@@ -56,6 +38,13 @@ stream {
         proxy_pass  $backend_name_443;
         proxy_protocol on;
         ssl_preread on;
+    }
+
+    # 监听 80 开启proxy_protocol
+    server {
+        listen 80 reuseport;
+        proxy_pass 127.0.0.1:8080;
+        proxy_protocol on;
     }
 }
 
@@ -129,8 +118,9 @@ http {
     }
 
     # 显示的定义一个 default_server
+    # 其中一个开启了proxy_protocol，其他http模块下的所有监听这个端口的都开启了proxy_protocol
     server {
-        listen 8080 default_server;
+        listen 8080 proxy_protocol default_server;
         server_name _;
         return 403;
     }
