--- a/renkxservices/nginx/nginx.conf
+++ b/renkxservices/nginx/nginx.conf
@@ -117,13 +117,21 @@ http {
         ''      close;
     }
 
+    include /etc/nginx/conf.d/*-/*.conf;
+
     # 显示的定义一个 default_server
     # 其中一个开启了proxy_protocol，其他http模块下的所有监听这个端口的都开启了proxy_protocol
     server {
-        listen 8080 proxy_protocol default_server;
-        server_name _;
-        return 403;
-    }
+        listen       8080 proxy_protocol default_server;
+        server_name  _;
+        root         /usr/share/nginx/html;
 
-    include /etc/nginx/conf.d/*-/*.conf;
+        error_page 404 /404.html;
+            location = /40x.html {
+        }
+
+        error_page 500 502 503 504 /50x.html;
+            location = /50x.html {
+        }
+    }
 }
