--- a/.env.renkx
+++ b/.env.renkx
@@ -29,7 +29,7 @@ CONTAINER_PACKAGE_URL=mirrors.aliyun.com
 #
 # Nginx
 #
-NGINX_VERSION=1.19.1-alpine
+NGINX_VERSION=1.19.9-alpine
 NGINX_HTTP_HOST_PORT=80
 NGINX_HTTPS_HOST_PORT=443
 NGINX_CONFD_DIR=~/job/docker/dnmpconfig/nginx/conf.d
@@ -40,6 +40,8 @@ NGINX_SSL_CERTIFICATE_DIR=~/job/docker/dnmpconfig/nginx/ssl
 NGINX_LOG_DIR=./renkxlogs/nginx
 # Available apps: certbot
 NGINX_INSTALL_APPS=
+
+DOMAIN_BBWAPI=bbwapi.f.jobuse.cn
 
 #
 # PHP7
@@ -92,6 +94,9 @@ FRPC_CONF_FILE=~/job/docker/dnmpconfig/frpc/frpc.ini
 # bbwws配置目录
 BBWWS_CONF_DIR=~/job/docker/dnmpconfig/bbwws
 
+# bbwtdtws配置目录
+BBWTDTWS_CONF_DIR=~/job/docker/dnmpconfig/bbwtdtws
+
 # root用户的.gitconfig文件
 ROOT_GITCONFIG_FILE=~/job/docker/dnmpconfig/git/gitconfig
 
@@ -114,3 +119,6 @@ COMPOSER_AUTH_JSON=~/job/docker/dnmpconfig/composer/auth.json
 ROOT_OH_MY_ZSH=~/.oh-my-zsh
 ROOT_ZSHRC_FILE=~/job/docker/dnmpconfig/zsh/zshrc
 ROOT_ZSH_HISTORY_FILE=~/job/docker/dnmpconfig/zsh/zsh_history
+
+# laravel echo版本
+LARAVEL_ECHO_SERVER_VERSION=3.1.1
