--- a/.env.renkx
+++ b/.env.renkx
@@ -91,11 +91,11 @@ NODE_VERSION=10.16.1-alpine
 # frp客户端配置
 FRPC_CONF_FILE=~/job/docker/dnmpconfig/frpc/frpc.ini
 
-# bbwws配置目录
-BBWWS_CONF_DIR=~/job/docker/dnmpconfig/bbwws
+# bbwws json配置
+BBWWS_CONF_JSON=~/job/docker/dnmpconfig/bbwws/laravel-echo-server.json
 
-# bbwtdtws配置目录
-BBWTDTWS_CONF_DIR=~/job/docker/dnmpconfig/bbwtdtws
+# bbwtdtws json配置
+BBWTDTWS_CONF_JSON=~/job/docker/dnmpconfig/bbwtdtws/laravel-echo-server.json
 
 # root用户的.gitconfig文件
 ROOT_GITCONFIG_FILE=~/job/docker/dnmpconfig/git/gitconfig
@@ -121,4 +121,4 @@ ROOT_ZSHRC_FILE=~/job/docker/dnmpconfig/zsh/zshrc
 ROOT_ZSH_HISTORY_FILE=~/job/docker/dnmpconfig/zsh/zsh_history
 
 # laravel echo版本
-LARAVEL_ECHO_SERVER_VERSION=3.1.1
+LARAVEL_ECHO_SERVER_VERSION=3.1.2
