--- a/docker-compose.renkx.yml
+++ b/docker-compose.renkx.yml
@@ -142,13 +142,15 @@ services:
     tty: true
     stdin_open: true
     volumes:
-      - ${BBWWS_CONF_DIR}:/app
+      - ${BBWWS_CONF_JSON}:/app/laravel-echo-server.json:ro
     extra_hosts:
       - "${DOMAIN_BBWAPI}:${NGINX_IPV4}"
     healthcheck:
-      test: [ "CMD-SHELL", "/usr/local/bin/health-check"]
-      interval: 30s
-      timeout: 5s
+      test: /usr/local/bin/health-check
+      start_period: 5s
+      interval: 3s
+      timeout: 3s
+      retries: 10
     networks:
       - default
 
@@ -160,13 +162,15 @@ services:
     tty: true
     stdin_open: true
     volumes:
-      - ${BBWTDTWS_CONF_DIR}:/app
+      - ${BBWTDTWS_CONF_JSON}:/app/laravel-echo-server.json:ro
     extra_hosts:
       - "${DOMAIN_BBWAPI}:${NGINX_IPV4}"
     healthcheck:
-      test: [ "CMD-SHELL", "/usr/local/bin/health-check"]
-      interval: 30s
-      timeout: 5s
+      test: /usr/local/bin/health-check
+      start_period: 5s
+      interval: 3s
+      timeout: 3s
+      retries: 10
     networks:
       - default
 
