--- a/.env.renkx
+++ b/.env.renkx
@@ -66,7 +66,7 @@ PHP_VERSION=7.4.16
 PHP_PHP_CONF_FILE=./renkxservices/php/php.ini
 PHP_FPM_CONF_FILE=./renkxservices/php/php-fpm.conf
 PHP_LOG_DIR=./renkxlogs/php
-PHP_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache,redis,bcmath,soap,xsl,xmlrpc,zip,pdo_dblib,pdo_sqlsrv,sockets,shmop,pcntl,gettext
+PHP_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache,redis,bcmath,soap,xsl,xmlrpc,zip,pdo_dblib,pdo_sqlsrv,sockets,shmop,pcntl,gettext,mongodb
 
 #
 # MySQL8
