frpc配置加载调整

--- a/.env.renkx
+++ b/.env.renkx
@@ -88,8 +88,8 @@ REDIS_CONF_FILE=./renkxservices/redis/redis.conf
 #
 NODE_VERSION=10.16.1-alpine
 
-# frp客户端配置
-FRPC_CONF_FILE=~/job/docker/dnmpconfig/frpc/frpc.ini
+# frp客户端配置目录
+FRPC_CONF_DIR=~/job/docker/dnmpconfig/frpc
 
 # bbwws json配置
 BBWWS_CONF_JSON=~/job/docker/dnmpconfig/bbwws/laravel-echo-server.json
