--- a/renkxservices/frp/Dockerfile
+++ b/renkxservices/frp/Dockerfile
@@ -1,5 +1,9 @@
 FROM alpine:3
 
-RUN apk --no-cache add wget bash && wget -N --no-check-certificate -q -O install_frp.sh "https://raw.githubusercontent.com/rkxs/s/main/install_frp.sh" && chmod +x install_frp.sh && bash install_frp.sh
+RUN apk --no-cache add wget bash && wget -N --no-check-certificate -q -O install_frp.sh "https://raw.githubusercontent.com/rkxs/s/main/install_frp.sh" && chmod +x install_frp.sh && bash install_frp.sh \
+    # 安装并设置时区
+    && apk --no-cache add tzdata \
+    && cp "/usr/share/zoneinfo/Asia/Shanghai" /etc/localtime \
+    && echo "Asia/Shanghai" > /etc/timezone
 
 WORKDIR /
