php的composer挂载调整

--- a/.env.renkx
+++ b/.env.renkx
@@ -114,6 +114,10 @@ SUPERVISOR_CRONTAB_ROOT_FILE=~/job/docker/dnmpconfig/crontabs/root
 
 # composer auth.json文件：拉取时所输入的账号密码
 COMPOSER_AUTH_JSON=~/job/docker/dnmpconfig/composer/auth.json
+# composer config.json文件：compose全局配置
+COMPOSER_CONFIG_JSON=~/job/docker/dnmpconfig/composer/config.json
+# composer 缓存目录
+COMPOSER_CACHE_DIR=~/job/data/composer/cache
 
 # ZSH配置和操作记录
 ROOT_OH_MY_ZSH=~/.oh-my-zsh
