目录接口更改

--- a/.env.renkx
+++ b/.env.renkx
@@ -4,12 +4,12 @@ NGINX_IPV4=1.1.0.201
 #
 # PHP source directory
 #
-SOURCE_DIR=~/job/app
+SOURCE_DIR=~/code/app
 
 #
 # Runtime data directory
 #
-DATA_DIR=~/job/data
+DATA_DIR=~/code/data
 
 #
 # Container Timezone
@@ -32,11 +32,11 @@ CONTAINER_PACKAGE_URL=mirrors.aliyun.com
 NGINX_VERSION=1.18.0-alpine
 NGINX_HTTP_HOST_PORT=80
 NGINX_HTTPS_HOST_PORT=443
-NGINX_CONFD_DIR=~/job/docker/dnmpconfig/nginx/conf.d
+NGINX_CONFD_DIR=~/code/renkx/docker/dnmpconfig/nginx/conf.d
 NGINX_CONF_FILE=./renkxservices/nginx/nginx.conf
 NGINX_FASTCGI_PHP_CONF=./renkxservices/nginx/fastcgi-php.conf
 NGINX_FASTCGI_PARAMS=./renkxservices/nginx/fastcgi_params
-NGINX_SSL_CERTIFICATE_DIR=~/job/docker/dnmpconfig/nginx/ssl
+NGINX_SSL_CERTIFICATE_DIR=~/code/renkx/docker/dnmpconfig/nginx/ssl
 NGINX_LOG_DIR=./renkxlogs/nginx
 # Available apps: certbot
 NGINX_INSTALL_APPS=
@@ -89,40 +89,40 @@ REDIS_CONF_FILE=./renkxservices/redis/redis.conf
 NODE_VERSION=10.16.1-alpine
 
 # frp客户端配置目录
-FRPC_CONF_DIR=~/job/docker/dnmpconfig/frpc
+FRPC_CONF_DIR=~/code/renkx/docker/dnmpconfig/frpc
 
 # bbwws json配置
-BBWWS_CONF_JSON=~/job/docker/dnmpconfig/bbwws/laravel-echo-server.json
+BBWWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/bbwws/laravel-echo-server.json
 
 # bbwtdtws json配置
-BBWTDTWS_CONF_JSON=~/job/docker/dnmpconfig/bbwtdtws/laravel-echo-server.json
+BBWTDTWS_CONF_JSON=~/code/renkx/docker/dnmpconfig/bbwtdtws/laravel-echo-server.json
 
 # root用户的.gitconfig文件
-ROOT_GITCONFIG_FILE=~/job/docker/dnmpconfig/git/gitconfig
+ROOT_GITCONFIG_FILE=~/code/renkx/docker/dnmpconfig/git/gitconfig
 
 # root用户.ssh目录配置
-ROOT_SSH_DIR=~/job/docker/dnmpconfig/ssh
+ROOT_SSH_DIR=~/code/renkx/docker/dnmpconfig/ssh
 
 #
 # supervisor
 #
 SUPERVISOR_PHP_LOG_DIR=./renkxlogs/supervisor
-SUPERVISOR_CONFIG=~/job/docker/dnmpconfig/supervisor/conf.d/
+SUPERVISOR_CONFIG=~/code/renkx/docker/dnmpconfig/supervisor/conf.d/
 SUPERVISOR_LOG=./renkxlogs/supervisor
 SUPERVISOR_CONF_FILE=./renkxservices/supervisor/supervisord.conf
-SUPERVISOR_CRONTAB_ROOT_FILE=~/job/docker/dnmpconfig/crontabs/root
+SUPERVISOR_CRONTAB_ROOT_FILE=~/code/renkx/docker/dnmpconfig/crontabs/root
 
 # composer auth.json文件：拉取时所输入的账号密码
-COMPOSER_AUTH_JSON=~/job/docker/dnmpconfig/composer/auth.json
+COMPOSER_AUTH_JSON=~/code/renkx/docker/dnmpconfig/composer/auth.json
 # composer config.json文件：compose全局配置
-COMPOSER_CONFIG_JSON=~/job/docker/dnmpconfig/composer/config.json
+COMPOSER_CONFIG_JSON=~/code/renkx/docker/dnmpconfig/composer/config.json
 # composer 缓存目录
-COMPOSER_CACHE_DIR=~/job/data/composer/cache
+COMPOSER_CACHE_DIR=~/code/data/composer/cache
 
 # ZSH配置和操作记录
 ROOT_OH_MY_ZSH=~/.oh-my-zsh
-ROOT_ZSHRC_FILE=~/job/docker/dnmpconfig/zsh/zshrc
-ROOT_ZSH_HISTORY_FILE=~/job/docker/dnmpconfig/zsh/zsh_history
+ROOT_ZSHRC_FILE=~/code/renkx/docker/dnmpconfig/zsh/zshrc
+#ROOT_ZSH_HISTORY_FILE=~/code/renkx/docker/dnmpconfig/zsh/zsh_history
 
 # laravel echo版本
 LARAVEL_ECHO_SERVER_VERSION=3.1.2
