新增extra/Users/renkx/code/renkx/dnmp/renkxservices/extra

--- a/renkxservices/php/Dockerfile
+++ b/renkxservices/php/Dockerfile
@@ -37,11 +37,16 @@ ENV COMPOSER_HOME=/tmp/composer
 # php image's www-data user uid & gid are 82, change them to 1000 (primary user)
 RUN apk --no-cache add shadow && usermod -u 1000 www-data && groupmod -g 1000 www-data
 
+# todo 设置扩展数据
+ADD ./renkxservices/extra  /root/extra
+
 # todo 安装zsh和git、supervisor等
 RUN apk update \
 	&& apk upgrade \
 	&& apk --no-cache add zsh git supervisor openssh vim \
-	&& rm -rf /var/cache/apk/* \
+    && mv /root/extra/oh-my-zsh /root/.oh-my-zsh \
+    && mv /root/extra/zshrc /root/.zshrc \
+	&& rm -rf /var/cache/apk/* /root/extra \
     # todo 更改用户shell www-data需要执行定时脚本
     && usermod -s /bin/ash www-data \
     # todo 最后需要删除zsh操作记录
